--- a/locales/en_US.json
+++ b/locales/en_US.json
@@ -151,5 +151,6 @@
     "ERROR_ATCF_GET_DATA_FAILED": "Failed to get ATCF data.",
     "ERROR_GET_FORECAST_NO_PARAMS": "Please pass one of name or atcf_id.",
     "CM_GET_FORECAST": "Get the official forecast for an active TC.",
-    "CM_NO_ACTIVE_STORMS": "There are no active TCs."
+    "CM_NO_ACTIVE_STORMS": "There are no active TCs.",
+    "CM_CANNOT_FIND_STORM": "I cannot find that storm."
 }
