--- a/src/cyclomonitor/locales/C.json
+++ b/src/cyclomonitor/locales/C.json
@@ -173,8 +173,10 @@
     "CLI_SYMBOL_NOT_FOUND": "Can't recognize {0} as a command or variable.",
     "CLI_INTERNAL_ERROR": "An internal error occurred.",
     "CLI_PARSER_REPR": "Internal parser",
-    "CLI_HELP": "CycloMonitor CLI help\n\nFor a list of commands, type `commands`. Type `help command` for help on\ncommand. Note: CLI is in early development; expect missing or broken features.\n\nGeneral usage:\nYou can execute commands and get the values of constants (creating variables\ncurrently isn't supported).\nExample command usage:\ncyclomonitor> echo hello world!\nExample attribute access:\ncyclomonitor> KT_TO_MPH\n(Currently, variables can't be used as command arguments, as the parser will\ntreat it as a string.)\n\nArguments are separated by spaces. Keyword arguments can be defined using\n`arg=value`. Example keyword argument usage:\ncyclomonitor> get_storm name=Patricia season=2015",
+    "CLI_HELP": "CycloMonitor CLI help\n\nFor a list of commands, type `commands`. Type `help command` for help on\ncommand. Note: CLI is in early development; expect missing or broken features.\n\nGeneral usage:\nYou can execute commands and get the values of variables.\nExample command usage:\ncyclomonitor> echo hello world!\nExample attribute access:\ncyclomonitor> KT_TO_MPH\n(Currently, variables can't be used as command arguments, as the parser will\ntreat it as a string.)\n\nArguments are separated by spaces. Keyword arguments can be defined using\n`arg=value`. Example keyword argument usage:\ncyclomonitor> get_storm name=Patricia season=2015\n\nTo create or change a variable, use the `set_var` command. Argument values\nthat start with `$` will be treated as a variable name.",
     "CLI_MISSING_DOCSTRING": "Missing docstring",
     "CLI_IS_A_VAR": "{0} is a variable.",
-    "CLI_STORM_NOT_FOUND": "Cannot find a TC with name or ID {0}."
+    "CLI_STORM_NOT_FOUND": "Cannot find a TC with name or ID {0}.",
+    "CLI_IS_A_CONSTANT": "Cannot edit the value of a constant!",
+    "CLI_ILLEGAL_NAME": "Illegal variable name!"
 }
