Lay the foundation of the `/help` command

--- a/src/cyclomonitor/locales/C.json
+++ b/src/cyclomonitor/locales/C.json
@@ -122,7 +122,7 @@
     "CM_NO_OWNER": "I cannot find the bot owner.",
     "CM_GET_PAST_STORM": "Get a storm from the best track database.",
     "CM_PAST_STORM_NAME": "Search by name",
-    "CM_PAST_STORM_SEASON": "Search by year (since 1841)",
+    "CM_PAST_STORM_SEASON": "Search by year (must be 1841 or later)",
     "CM_PAST_STORM_BASIN": "Search by basin",
     "CM_PAST_STORM_ATCF": "Search by ATCF ID",
     "CM_PAST_STORM_SID": "Search by IBTrACS ID",
@@ -134,7 +134,7 @@
     "CM_UNNAMED_STORM": "Unnamed {0}",
     "CM_UNKNOWN": "Unknown",
     "CM_PAST_STORM_INFO": "# {0} ({1})\n- Basin: {2}\n- Peak winds: {3}\n- Peak pressure: {4}\n- Time of peak: {5}\n- ATCF ID: {6}\n- IBTrACS ID: {7}\nNote: if these data are inaccurate, please complain to the WMO, not me.",
-    "CM_NO_RESULTS": "No results found. Please try again with different paramaters.",
+    "CM_NO_RESULTS": "No results found. Please try again with different parameters.",
     "ERROR_WTF": "What the fuck is this? {0}",
     "CM_SET_LANGUAGE": "Set the language for this server.",
     "CM_LANG_TO_USE": "The language to use.",
@@ -182,5 +182,33 @@
     "CLI_ILLEGAL_NAME": "Illegal variable name!",
     "CLI_OLD_PY_VERSION": "Detected Python {0}! Python 3.11+ is recommended as some commands can break on older versions!",
     "NEARLY_STATIONARY": "nearly stationary",
-    "STATIONARY": "stationary"
+    "STATIONARY": "stationary",
+    "CM_EXTENDED_PING": "This command gets the response time between the bot and the API. It does not get the time between your interaction and the acknowledgement of said interaction.",
+    "CM_EXTENDED_SET_TRACKING_CHANNEL": "This command sets the channel where CycloMonitor will post its updates regarding cyclone information. For this to work correctly, the channel must be visible to CycloMonitor and it must be able to send messages to said channel. Use of this command requires the `Manage Channels` permission.",
+    "CM_EXTENDED_UPDATE": "This command sends the current cyclone information to the server's tracking channel. This command will fail if the tracking channel is not set.",
+    "CM_EXTENDED_UPDATE_ALT": "This command retrieves the current cyclone information using the alternate ATCF source and sends it to the server's tracking channel. This command will fail if the tracking channel is not set.",
+    "CM_EXTENDED_SET_BASINS": "This command sets the basin configuration based on the parameters below. Any basin set to `False` will not be tracked. At least one basin must be tracked to receive cyclone information. Use of this command requires the `Manager Server` permission.",
+    "CM_EXTENDED_UPDATE_ALL": "This command acts as a manual override for the automatic update routines, causing CycloMonitor to update immediately without regard for its schedule.",
+    "CM_EXTENDED_UPDATE_ALL_ALT": "This command acts as a manual override for the automatic update routines, causing CycloMonitor to update immediately without regard for its schedule, while also forcing it to use the alternate ATCF source.",
+    "CM_EXTENDED_ANNOUNCE_ALL": "This command is used by the bot owner to send a message to all servers CycloMonitor is in, regardless of which basins are enabled.",
+    "CM_EXTENDED_ANNOUNCE_BASIN": "This command is used by the bot owner to send a message to all servers CycloMonitor is in except those that are not tracking the specified basin.",
+    "CM_EXTENDED_ANNOUNCE_FILE": "This command works similarly to `/announce_all`, but uses the contents of an attached text file to send a message.",
+    "CM_EXTENDED_INVITE": "This command sends a link you can use to add the bot to your server.",
+    "CM_EXTENDED_STATISTICS": "This command allows you to view CycloMonitor's globally tracked statistics: that among those are the server count, the total member count, the strongest storm, the yikes counter, and the bot's uptime.",
+    "CM_EXTENDED_YIKES": "This command increments the global yikes counter. The yikes counter is then announced to all servers CycloMonitor is in.\nUse this command when something happens that makes you say \"Yikes!\"",
+    "CM_EXTENDED_GET_DATA": "This command is used by the bot owner to download the latest ATCF data without running the automatic update routines.",
+    "CM_EXTENDED_GET_DATA_ALT": "This command is used by the bot owner to download the latest ATCF data from the alternate source without running the automatic update routines.",
+    "CM_EXTENDED_ATCF_RESET": "This command is used by the bot owner to clear the bot's cached ATCF data.",
+    "CM_EXTENDED_GITHUB": "This command sends a link to CycloMonitor's GitHub repository.",
+    "CM_EXTENDED_COPYRIGHT": "This command sends CycloMonitor's copyright notice.",
+    "CM_EXTENDED_RSMC_LIST": "This command sends a list of Regional Specialized Meteorological Centers (RSMCs) and links to their corresponding websites. It also lists the time period of their cyclone season (if applicable).",
+    "CM_EXTENDED_GET_LOG": "This command sends CycloMonitor's log file to the bot owner.",
+    "CM_EXTENDED_SUSPEND_UPDATES": "This command is used by the bot owner to pause automated updates (they will resume automatically after reconnecting).",
+    "CM_EXTENDED_RESUME_UPDATES": "This command is used by the bot owner to resume automated updates.",
+    "CM_EXTENDED_FEEDBACK": "Use this command to send feedback to the bot owner. **Inappropriate use of this command will result in a ban from further use.**",
+    "CM_EXTENDED_GET_PAST_STORM": "This command queries the IBTrACS database to return information about a past storm. If multiple storms match the query, you'll be asked to provide more parameters to narrow your search.",
+    "CM_EXTENDED_SET_LANGUAGE": "This command sets the language CycloMonitor will use in this server. Currently, only English is supported. To translate CycloMonitor to other languages, add a file to `src/cyclomonitor/locales` in CycloMonitor's GitHub repository (see `/github`) and use `en_US.json` or `C.json` as a base.",
+    "CM_EXTENDED_GET_FORECAST": "This command sends the forecast image for a specified active storm. The image will be from NHC/CPHC if the storm is in the North Atlantic, Eastern Pacific, or Central Pacific, and it will be from JTWC otherwise. This command cannot be used if there are no active storms.",
+    "CM_EXTENDED_SERVER": "This command sends an invite link to CycloMonitor's official server.",
+    "CM_EXTENDED_CONTACT_GUILD": "This command is used by the bot owner to send a message to a specific server in the hopes of getting a staff member's attention in case of a server-specific problem (i.e. configuration errors)."
 }
