Getting ready for the help command

--- a/src/cyclomonitor/locales/C.json
+++ b/src/cyclomonitor/locales/C.json
@@ -93,7 +93,7 @@
     "ERROR_NO_GLOBAL_VARS": "Could not get global variables.",
     "CM_STATISTICS": "# CycloMonitor statistics\nCurrently serving {0} guilds, totaling {4}\\* members.\n\\*This is an estimate which may not accurately reflect the true number of members being served.\n\nStrongest cyclone recorded by this bot: {1[0]} {1[1]} {1[2]} ({1[3]})\n- Wind peak: {1[5]} kt ({1[6]} mph/{1[7]} kph)\n- Pressure peak: {1[8]} mb\n- Time recorded: <t:{1[4]}:f>\nCurrent yikes counter: {2}\nBot uptime: {3}",
     "CM_YIKES": "Yikes!",
-    "CM_INC_YIKES_COUNT": "The yikes count is now {0}!",
+    "CM_INC_YIKES_COUNT": "{0} ({1}) has incremented the yikes counter!",
     "CM_YIKES_RESPONSE": "# Yikes!\nThe yikes count is now {0}!",
     "CM_GET_DATA": "Get the latest ATCF data without triggering an update",
     "CM_GET_DATA_SUCCESS": "ATCF data downloaded.\n{0}",
@@ -195,7 +195,7 @@
     "CM_EXTENDED_ANNOUNCE_FILE": "This command works similarly to `/announce_all`, but uses the contents of an attached text file to send a message.",
     "CM_EXTENDED_INVITE": "This command sends a link you can use to add the bot to your server.",
     "CM_EXTENDED_STATISTICS": "This command allows you to view CycloMonitor's globally tracked statistics: that among those are the server count, the total member count, the strongest storm, the yikes counter, and the bot's uptime.",
-    "CM_EXTENDED_YIKES": "This command increments the global yikes counter. The yikes counter is then announced to all servers CycloMonitor is in.\nUse this command when something happens that makes you say \"Yikes!\"",
+    "CM_EXTENDED_YIKES": "This command increments the global yikes counter. The yikes counter is then announced to all servers CycloMonitor is in.\nUse this command when something happens that makes you say \"Yikes!\" It does not have to be related to tropical cyclones. **Inappropriate use of this command will result in a ban from further use.**",
     "CM_EXTENDED_GET_DATA": "This command is used by the bot owner to download the latest ATCF data without running the automatic update routines.",
     "CM_EXTENDED_GET_DATA_ALT": "This command is used by the bot owner to download the latest ATCF data from the alternate source without running the automatic update routines.",
     "CM_EXTENDED_ATCF_RESET": "This command is used by the bot owner to clear the bot's cached ATCF data.",
@@ -210,5 +210,32 @@
     "CM_EXTENDED_SET_LANGUAGE": "This command sets the language CycloMonitor will use in this server. Currently, only English is supported. To translate CycloMonitor to other languages, add a file to `src/cyclomonitor/locales` in CycloMonitor's GitHub repository (see `/github`) and use `en_US.json` or `C.json` as a base.",
     "CM_EXTENDED_GET_FORECAST": "This command sends the forecast image for a specified active storm. The image will be from NHC/CPHC if the storm is in the North Atlantic, Eastern Pacific, or Central Pacific, and it will be from JTWC otherwise. This command cannot be used if there are no active storms.",
     "CM_EXTENDED_SERVER": "This command sends an invite link to CycloMonitor's official server.",
-    "CM_EXTENDED_CONTACT_GUILD": "This command is used by the bot owner to send a message to a specific server in the hopes of getting a staff member's attention in case of a server-specific problem (i.e. configuration errors)."
+    "CM_EXTENDED_CONTACT_GUILD": "This command is used by the bot owner to send a message to a specific server in the hopes of getting a staff member's attention in case of a server-specific problem (i.e. configuration errors).",
+    "CM_HELP_GENERAL": "Stop it. Get some help.",
+    "CM_HELP_ALL": "Full list of commands",
+    "CM_HELP_COMMON": "List of common commands",
+    "CM_HELP_USEFUL": "List of useful commands",
+    "CM_HELP_ADMIN": "Full list of administration commands",
+    "CM_HELP_CONFIG": "List of configuration commands",
+    "CM_HELP_INTERNAL": "List of internal commands",
+    "CM_HELP_COMMAND": "Show detailed information about a command",
+    "CM_EXTENDED_HELP_GENERAL": "This command shows the primary help page, providing a list of other help pages, each showing a (sub)set of commands.",
+    "CM_EXTENDED_HELP_ALL": "This command shows a list of all commands except for internal commands.",
+    "CM_EXTENDED_HELP_COMMON": "This command shows a list of common commands, which are commands that anyone can use.",
+    "CM_EXTENDED_HELP_USEFUL": "This command shows a list of useful commands, a subset of common commands that are deemed most useful for the bot functionality.",
+    "CM_EXTENDED_HELP_ADMIN": "This command shows a list of administration commands, which are commands that are intended to be used by server staff.",
+    "CM_EXTENDED_HELP_CONFIG": "This command shows a list of configuration commands, a subset of administration commands which are used to configure CycloMonitor.",
+    "CM_EXTENDED_HELP_INTERNAL": "This command shows a list of internal commands, which are commands that are only usable by the bot owner. **Such commands are listed for transparency purposes only, and any attempts to use them will be logged.**",
+    "CM_EXTENDED_HELP_COMMAND": "This command shows detailed information about the specified command, describing how to use it correctly and any parameters it has.",
+    "CM_GENERAL_HELP": "# General help\nThank you for using CycloMonitor. This bot is designed to make it easier to keep tabs on cyclones around the world. For further help, use one of the commands below:\n* `/help all` -- All commands\n* `/help common` -- Common commands\n  * `/help useful` -- Useful commands\n* `/help admin` -- Administration commands\n  * `/help config` -- Configuration commands\n* `/help internal` -- Internal commands\nFor more information on a specific command, use `/help command <command_name>`.",
+    "CM_COMMON_COMMANDS": "# Common commands\nThese commands are available to all users.\n",
+    "CM_USEFUL_COMMANDS": "# Useful commands\nThis is a subset of common commands denoting those that are most useful for the bot functionality.\n",
+    "CM_ADMIN_COMMANDS": "# Administration commands\nThese are commands that are intended to be used by server staff.\n",
+    "CM_CONFIG_COMMANDS": "# Configuration commands\nThis is a subset of administration commands used to configure CycloMonitor.\n",
+    "CM_INTERNAL_COMMANDS": "# Internal commands\nThese are commands that are only usable by the bot owner for testing and other nefarious uses. They are shown here for transparency purposes.\n",
+    "CM_ALL_COMMANDS": "# All commands\nAll commands except for internal commands (see `/help internal`). For more information on a specific command, use `/help command <command_name>`.\n",
+    "PARAMETERS": "Parameters:\n",
+    "HAS_NO_PARAMETERS": "This command does not take any additional parameters.",
+    "FOR_INTERNAL_USE_ONLY": "**This command is for internal use only. Attempts to use this command will be logged.**",
+    "MISSING_DESCRIPTION": "Missing extended description"
 }
