--- a/src/cyclomonitor/locales/C.json
+++ b/src/cyclomonitor/locales/C.json
@@ -240,5 +240,6 @@
     "MISSING_DESCRIPTION": "Missing extended description",
     "NO_DESCRIPTION_PROVIDED": "No description provided",
     "CM_STORM_NAME": "Storm name",
-    "CM_WHICH_COMMAND": "Which command?"
+    "CM_WHICH_COMMAND": "Which command?",
+    "CM_INFO": "This is CycloMonitor version {0}, running on {1} {2} via Python {3}.\nMy owner is {4} ({5}; {6}), who should be happy to help you out!"
 }
