--- a/src/cyclomonitor/locales/en_US.json
+++ b/src/cyclomonitor/locales/en_US.json
@@ -242,5 +242,6 @@
     "CM_STORM_NAME": "Storm name",
     "CM_WHICH_COMMAND": "Which command?",
     "CM_ABOUT": "About CycloMonitor",
-    "CM_INFO": "This is CycloMonitor version {0}, running on {1} {2} via Python {3} on host {4}.\nMy owner is {5} ({6}; {7}), who should be happy to help you out!"
+    "CM_INFO": "This is CycloMonitor version {0}, running on {1} {2} via Python {3} on host {4}.\nMy owner is {5} ({6}; {7}), who should be happy to help you out!",
+    "CM_EXPER_CONE": "Use experimental cone (NHC and CPHC only)"
 }
